# 2020_VaporFishDisco

./: CMakeLists.txt  README.md  main.cpp  project_base
glad/include/glad/: glad.h
glad/src/: glad.c
include/learnopengl/: shader.h
resources/shaders/: aa_post.fs  edge.fs  kocka.fs  kocka.vs  model.fs  model.vs  pravougaonik.fs  pravougaonik.vs  shader_objekat.fs  shader_objekat.vs
src/: main.cpp
